tests/context_duplicate_with_field_bad.stderr
tests/context_duplicate_with_field_bad.sl:13:13: error: SL2033: duplicate context field in with clause
